--- a/style.css
+++ b/style.css
@@ -268,11 +268,13 @@ section .about{
     text-align: center;
     background-color: #1F2334;
 }
+@media only screen and (min-width: 1024px){
 .col-3:hover{
     border-radius: 5px 65px;
     background-color: #151f4d;
     color: #fff;
     border: 2px solid #FF4A57;
+}
 }
 
 .col-3 img{
