--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@
 html{
     scroll-behavior: smooth;
 }
+::-webkit-scrollbar{
+    width: 14px;
+    background-color: grey;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #FE4A56;
+    margin-left: 2px;
+    border: 2px solid white;
+    border-radius: 8px;
+}
 .container{
   width: 80%;
   margin: auto;
